--- a/index.html
+++ b/index.html
@@ -12,32 +12,36 @@
     </header>
 
     <main>
-        <img src="imagens/imagem introdutória.jpg" alt="medicos" style="justify-content: center;">
+        <picture>
+            <source media="(max-width: 800px)" srcset="imagens/imagem-introdutória-pq.jpg">
+            <img src="imagens/imagem introdutória.jpg" alt="medicos" style="justify-content: center;" class="imagem_introducao">
+        </picture>
+        
         <p>Bem-vindo ao nosso portal de diagnóstico de Infecções Sexualmente Transmissíveis (ISTs). Aqui, priorizamos sua saúde e bem-estar, oferecendo uma plataforma segura e confiável para entender e diagnosticar ISTs de forma rápida e precisa. Com uma abordagem baseada em evidências e orientada por profissionais de saúde qualificados, estamos comprometidos em fornecer informações claras e acessíveis sobre as diferentes ISTs, seus sintomas, métodos de prevenção e opções de tratamento. Nosso objetivo é capacitar você com o conhecimento necessário para tomar decisões informadas sobre sua saúde sexual.</p>
         <p style="font-size: 1.4em; text-align: center;">Clique em cima do sintomas que você está sentindo para que possamos ter um diagnostico</p>
 
         <article>
-            <a href="outras paginas/hpv.html" style="text-decoration: none; width: 700px; display: block; margin: auto;">
+            <a href="outras paginas/hpv.html" style="text-decoration: none; max-width: 700px; min-width: 250px; display: block; margin: auto; padding: 0px 10px;">
                 <p class="opcao">Coceira, câncer cervical, verruga genital</p>
             </a>
 
-            <a href="outras paginas/herpes.html" style="text-decoration: none; width: 700px; display: block; margin: auto;">
+            <a href="outras paginas/herpes.html" style="text-decoration: none; max-width: 700px; min-width: 250px; display: block; margin: auto; padding: 0px 10px;">
                 <p class="opcao">Feridas no orgão sexual e úlceras, dores no pênis ou na vagina, sensação de formigamento</p>
             </a>
             
-            <a href="outras paginas/clamidia.html" style="text-decoration: none; width: 700px; display: block; margin: auto;">
+            <a href="outras paginas/clamidia.html" style="text-decoration: none; max-width: 700px; min-width: 250px; display: block; margin: auto; padding: 0px 10px;">
                 <p class="opcao">Corrimento vaginal anormal, Pus ou secreção aquosa do pênis, dor ou sangramento ao redor do ânus, testículos inchados ou sensíveis, dor ou ardor ao urinar, coeira na região intima e dor ao ter relações</p>
             </a>
 
-            <a href="outras paginas/gonorreia.html" style="text-decoration: none; width: 700px; display: block; margin: auto;">
+            <a href="outras paginas/gonorreia.html" style="text-decoration: none; max-width: 700px; min-width: 250px; display: block; margin: auto; padding: 0px 10px;">
                 <p class="opcao">Dor ao urinar e secreção anormal (muito forte e amarelada) do pênis ou da vagina</p>
             </a>
 
-            <a href="outras paginas/aids.html" style="text-decoration: none; width: 700px; display: block; margin: auto;">
+            <a href="outras paginas/aids.html" style="text-decoration: none; max-width: 700px; min-width: 250px; display: block; margin: auto; padding: 0px 10px;">
                 <p class="opcao">Sintomas de uma gripe, febre, dor de garganta, fadiga e cansaço</p>
             </a>
 
-            <a href="outras paginas/sifilis.html" style="text-decoration: none; width: 700px; display: block; margin: auto;">
+            <a href="outras paginas/sifilis.html" style="text-decoration: none; max-width: 700px; min-width: 250px; display: block; margin: auto; padding: 0px 10px;">
                 <p class="opcao">Ferida indolor na genitália, no reto ou na boca, irritação na pele, dores musculares, dor decabeça e dor de garganta, febre, mal estar e protuberâncias</p>
             </a>
         </article>
