--- a/outras paginas/aids.html
+++ b/outras paginas/aids.html
@@ -12,7 +12,10 @@
     </header>
 
     <main>
-        <img src="../imagens/imagem analise.jpg" alt="medico_diagnosticando">
+        <picture>
+            <source media="(max-width: 800px)" srcset="../imagens/imagem-analise-pg.jpg">
+            <img src="../imagens/imagem-analise.jpg" alt="medico_diagnosticando" style="justify-content: center;">
+        </picture>
         <p class="conteudo">O tratamento da AIDS, causada pelo vírus da imunodeficiência humana (HIV), visa controlar a replicação viral, fortalecer o sistema imunológico e melhorar a qualidade de vida dos pacientes. Aqui está um resumo abrangente:</p>
         <ol class="conteudo">
             <li>Terapia Antirretroviral (TARV): A terapia antirretroviral é o tratamento padrão para a AIDS. Envolve o uso de uma combinação de medicamentos antirretrovirais para suprimir a replicação viral, reduzindo a carga viral no corpo e permitindo que o sistema imunológico se recupere. A TARV é geralmente uma combinação de pelo menos três medicamentos, frequentemente administrados em um único comprimido, conhecido como terapia combinada de dose fixa (TDF).</li>
