--- a/outras paginas/clamidia.html
+++ b/outras paginas/clamidia.html
@@ -12,7 +12,10 @@
     </header>
 
     <main>
-        <img src="../imagens/imagem analise.jpg" alt="medico_diagnosticando">
+        <picture>
+            <source media="(max-width: 800px)" srcset="../imagens/imagem-analise-pg.jpg">
+            <img src="../imagens/imagem-analise.jpg" alt="medico_diagnosticando" style="justify-content: center;">
+        </picture>
         <p class="conteudo">O tratamento da clamídia é fundamental para prevenir complicações a longo prazo e interromper a transmissão da infecção para outras pessoas. Aqui está um resumo abrangente:</p>
         <ol class="conteudo">
             <li>Antibióticos: A clamídia é tratada com antibióticos. O tratamento padrão geralmente envolve uma dose única ou uma série de doses de antibióticos, como azitromicina ou doxiciclina. É essencial completar o curso completo de antibióticos, mesmo que os sintomas desapareçam antes.</li>
