--- a/outras paginas/gonorreia.html
+++ b/outras paginas/gonorreia.html
@@ -12,7 +12,10 @@
     </header>
 
     <main>
-        <img src="../imagens/imagem analise.jpg" alt="medico_diagnosticando">
+        <picture>
+            <source media="(max-width: 800px)" srcset="../imagens/imagem-analise-pg.jpg">
+            <img src="../imagens/imagem-analise.jpg" alt="medico_diagnosticando" style="justify-content: center;">
+        </picture>
         <p class="conteudo">O tratamento da gonorreia é fundamental para evitar complicações e interromper a transmissão da infecção. Aqui está um resumo abrangente:</p>
         <ol class="conteudo">
             <li>Antibióticos: A gonorreia é tratada com antibióticos. No entanto, devido ao aumento da resistência aos antibióticos, os protocolos de tratamento podem variar. A ceftriaxona, administrada por injeção, é frequentemente combinada com azitromicina ou doxiciclina para tratar gonorreia e clamídia simultaneamente.</li>
