--- a/outras paginas/herpes.html
+++ b/outras paginas/herpes.html
@@ -12,7 +12,10 @@
     </header>
 
     <main>
-        <img src="../imagens/imagem analise.jpg" alt="medico_diagnosticando">
+        <picture>
+            <source media="(max-width: 800px)" srcset="../imagens/imagem-analise-pg.jpg">
+            <img src="../imagens/imagem-analise.jpg" alt="medico_diagnosticando" style="justify-content: center;">
+        </picture>
         <p class="conteudo">O tratamento da herpes genital visa aliviar os sintomas, reduzir o número e a gravidade das recorrências e prevenir a transmissão do vírus para outras pessoas. Aqui está um resumo abrangente:</p>
         <ol class="conteudo">
             <li>Antivirais: Medicamentos antivirais, como o aciclovir, o valaciclovir e o famciclovir, são prescritos para tratar a herpes genital. Eles ajudam a reduzir a gravidade dos sintomas durante uma crise e podem ajudar a prevenir recorrências quando tomados regularmente.</li>
