--- a/outras paginas/hpv.html
+++ b/outras paginas/hpv.html
@@ -12,7 +12,10 @@
     </header>
 
     <main>
-        <img src="../imagens/imagem analise.jpg" alt="medico_diagnosticando">
+        <picture>
+            <source media="(max-width: 800px)" srcset="../imagens/imagem-analise-pg.jpg">
+            <img src="../imagens/imagem-analise.jpg" alt="medico_diagnosticando" style="justify-content: center;">
+        </picture>
         <p class="conteudo">O tratamento do Papilomavírus Humano (HPV) varia de acordo com os sintomas, o tipo de HPV e a gravidade da infecção. Aqui está um resumo abrangente:</p>
         <ol class="conteudo">
             <li>Monitoramento Regular: Em muitos casos, o HPV desaparece espontaneamente sem causar sintomas graves. Para infecções de baixo risco e lesões que não apresentam risco de câncer, pode ser recomendado o monitoramento regular sem intervenção.</li>
