--- a/outras paginas/sifilis.html
+++ b/outras paginas/sifilis.html
@@ -11,7 +11,10 @@
         <h1>Você foi diagnosticado com Sífilis</h1>
     </header>
     <main>
-        <img src="../imagens/imagem analise.jpg" alt="medico_diagnosticando">
+        <picture>
+            <source media="(max-width: 800px)" srcset="../imagens/imagem-analise-pg.jpg">
+            <img src="../imagens/imagem-analise.jpg" alt="medico_diagnosticando" style="justify-content: center;">
+        </picture>
         <p class="conteudo">O tratamento da sífilis é vital para controlar a infecção e prevenir complicações sérias. Aqui está um resumo abrangente:</p>
         <ol class="conteudo">
             <li>Penicilina: A penicilina é o tratamento padrão para a sífilis em todas as suas fases. Dependendo do estágio da infecção, a dose e a duração do tratamento variam. Para sífilis precoce (primária, secundária e latente precoce), uma única injeção de penicilina benzatina é frequentemente suficiente. Para casos mais avançados, a penicilina pode ser administrada por um período mais longo.</li>
