--- a/index.html
+++ b/index.html
@@ -46,5 +46,9 @@
             </a>
         </article>
     </main>
+
+    <footer>
+        <p>Para mais detalhes entre em contato conosco pelo: <a href="#"><img src="./imagens/whatsapp.png" alt="whatsapp" style="padding-left: 20px;"></a> <a href="#"><img src="./imagens/instagram.png" alt="instagram" style="padding-left: 20px;"></a></p>
+    </footer>
 </body>
 </html>
