adicionando informações para contato

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </main>
 
     <footer>
-        <p>Para mais detalhes entre em contato conosco pelo: <a href="#"><img src="./imagens/whatsapp.png" alt="whatsapp" style="padding-left: 20px;"></a> <a href="#"><img src="./imagens/instagram.png" alt="instagram" style="padding-left: 20px;"></a></p>
+        <p>Para mais detalhes entre em contato conosco pelo: <a href="https://api.whatsapp.com/send?phone=5562991902909&text=Ol%C3%A1!%20Gostaria%20de%20saber%20valores%20da%20sua%20consulta,%20estou%20interessado(a)%20e%20gostaria%20de%20marcar%20um%20hor%C3%A1rio" target="_blank"><img src="imagens/whatsapp.png" alt="whatsapp" style="padding-left: 20px;"></a> <a href="https://www.instagram.com/marcola.classic/" target="_blank"><img src="imagens/instagram.png" alt="instagram" style="padding-left: 20px;"></a></p>
     </footer>
 </body>
 </html>
