--- a/outras paginas/aids.html
+++ b/outras paginas/aids.html
@@ -25,6 +25,7 @@
             <li>Aconselhamento e Apoio: O aconselhamento sobre adesão ao tratamento, prevenção de transmissão do HIV, estilo de vida saudável e gerenciamento emocional é essencial para o sucesso do tratamento da AIDS. Os pacientes podem receber apoio de equipes de saúde multidisciplinares, incluindo médicos, enfermeiros, assistentes sociais e conselheiros.</li>
             <li>Prevenção de Transmissão: Além do tratamento, medidas de prevenção são importantes para reduzir a transmissão do HIV para outras pessoas. Isso inclui o uso consistente de preservativos, a profilaxia pré-exposição (PrEP) para parceiros negativos e o tratamento precoce de infecções sexualmente transmissíveis (ISTs).</li>
             <li>Cuidados a Longo Prazo: A AIDS é uma condição crônica que requer cuidados a longo prazo. Os pacientes devem seguir o tratamento conforme orientação médica, adotar um estilo de vida saudável e manter uma rede de apoio emocional.</li>
+            <li>Seguimento Médico: Consultas de acompanhamento são importantes para monitorar a resposta ao tratamento, garantir que não haja recorrências e discutir estratégias de prevenção a longo prazo. <a href="https://api.whatsapp.com/send?phone=5562991902909&text=Ol%C3%A1!%20Gostaria%20de%20saber%20valores%20da%20sua%20consulta,%20estou%20interessado(a)%20e%20gostaria%20de%20marcar%20um%20hor%C3%A1rio" target="_blank">Agende já sua consulta no nosso WhatsApp</a></li>
         </ol>
         <a href="../index.html" style="text-decoration: none; width: 200px; display: block; margin: auto;">
             <p class="voltar">Voltar ao início</p>
@@ -32,7 +33,7 @@
     </main>
 
     <footer>
-        <p>Para mais detalhes entre em contato conosco pelo: <a href="#"><img src="../imagens/whatsapp.png" alt="whatsapp" style="padding-left: 20px;"></a> <a href="#"><img src="../imagens/instagram.png" alt="instagram" style="padding-left: 20px;"></a></p>
+        <p>Para mais detalhes entre em contato conosco pelo: <a href="https://api.whatsapp.com/send?phone=5562991902909&text=Ol%C3%A1!%20Gostaria%20de%20saber%20valores%20da%20sua%20consulta,%20estou%20interessado(a)%20e%20gostaria%20de%20marcar%20um%20hor%C3%A1rio" target="_blank"><img src="../imagens/whatsapp.png" alt="whatsapp" style="padding-left: 20px;"></a> <a href="https://www.instagram.com/marcola.classic/" target="_blank"><img src="../imagens/instagram.png" alt="instagram" style="padding-left: 20px;"></a></p>
     </footer>
 </body>
 </html>
