--- a/outras paginas/clamidia.html
+++ b/outras paginas/clamidia.html
@@ -24,7 +24,7 @@
             <li>Reteste: Após o término do tratamento, é importante fazer um reteste para garantir que a infecção tenha sido eliminada com sucesso. Isso geralmente é feito algumas semanas após o término do tratamento.</li>
             <li>Prevenção de Complicações: A clamídia não tratada pode levar a complicações graves, como doença inflamatória pélvica (DIP), infertilidade e gravidez ectópica em mulheres. Portanto, é essencial tratar a infecção o mais rápido possível para prevenir essas complicações.</li>
             <li>Aconselhamento e Educação: Além do tratamento com antibióticos, é importante fornecer aconselhamento sobre práticas sexuais seguras, prevenção de infecções sexualmente transmissíveis (ISTs) e uso de preservativos para reduzir o risco de contrair clamídia no futuro.</li>
-            <li>Seguimento Médico: Após o tratamento, é recomendado fazer consultas de acompanhamento com um profissional de saúde para garantir que a infecção tenha sido eliminada com sucesso e discutir estratégias de prevenção a longo prazo.</li>
+            <li>Seguimento Médico: Consultas de acompanhamento são importantes para monitorar a resposta ao tratamento, garantir que não haja recorrências e discutir estratégias de prevenção a longo prazo. <a href="https://api.whatsapp.com/send?phone=5562991902909&text=Ol%C3%A1!%20Gostaria%20de%20saber%20valores%20da%20sua%20consulta,%20estou%20interessado(a)%20e%20gostaria%20de%20marcar%20um%20hor%C3%A1rio" target="_blank">Agende já sua consulta no nosso WhatsApp</a></li>
         </ol>
         <a href="../index.html" style="text-decoration: none; width: 200px; display: block; margin: auto;">
             <p class="voltar">Voltar ao início</p>
@@ -32,7 +32,7 @@
     </main>
 
     <footer>
-        <p>Para mais detalhes entre em contato conosco pelo: <a href="#"><img src="../imagens/whatsapp.png" alt="whatsapp" style="padding-left: 20px;"></a> <a href="#"><img src="../imagens/instagram.png" alt="instagram" style="padding-left: 20px;"></a></p>
+        <p>Para mais detalhes entre em contato conosco pelo: <a href="https://api.whatsapp.com/send?phone=5562991902909&text=Ol%C3%A1!%20Gostaria%20de%20saber%20valores%20da%20sua%20consulta,%20estou%20interessado(a)%20e%20gostaria%20de%20marcar%20um%20hor%C3%A1rio" target="_blank"><img src="../imagens/whatsapp.png" alt="whatsapp" style="padding-left: 20px;"></a> <a href="https://www.instagram.com/marcola.classic/" target="_blank"><img src="../imagens/instagram.png" alt="instagram" style="padding-left: 20px;"></a></p>
     </footer>
 </body>
 </html>
