--- a/outras paginas/gonorreia.html
+++ b/outras paginas/gonorreia.html
@@ -23,7 +23,7 @@
             <li>Abstinência Sexual: Durante o tratamento e até que ambos os parceiros tenham concluído o tratamento, é recomendado abster-se de atividade sexual para evitar a transmissão da infecção.</li>
             <li>Prevenção de Complicações: A gonorreia não tratada pode levar a complicações graves, como doença inflamatória pélvica (DIP), infertilidade e gravidez ectópica em mulheres, além de aumentar o risco de contrair ou transmitir o HIV. Portanto, é crucial tratar a infecção o mais rápido possível.</li>
             <li>Aconselhamento e Educação: Além do tratamento com antibióticos, é importante fornecer aconselhamento sobre práticas sexuais seguras, prevenção de infecções sexualmente transmissíveis (ISTs) e uso de preservativos para reduzir o risco de contrair gonorreia no futuro.</li>
-            <li>Seguimento Médico: Exames de acompanhamento são importantes para garantir que a infecção tenha sido eliminada com sucesso, especialmente devido ao aumento da resistência aos antibióticos. Se os sintomas persistirem após o tratamento, é essencial consultar um profissional de saúde novamente.</li>
+            <li>Seguimento Médico: Consultas de acompanhamento são importantes para monitorar a resposta ao tratamento, garantir que não haja recorrências e discutir estratégias de prevenção a longo prazo. <a href="https://api.whatsapp.com/send?phone=5562991902909&text=Ol%C3%A1!%20Gostaria%20de%20saber%20valores%20da%20sua%20consulta,%20estou%20interessado(a)%20e%20gostaria%20de%20marcar%20um%20hor%C3%A1rio" target="_blank">Agende já sua consulta no nosso WhatsApp</a></li>
         </ol>
         <a href="../index.html" style="text-decoration: none; width: 200px; display: block; margin: auto;">
             <p class="voltar">Voltar ao início</p>
@@ -31,7 +31,7 @@
     </main>
 
     <footer>
-        <p>Para mais detalhes entre em contato conosco pelo: <a href="#"><img src="../imagens/whatsapp.png" alt="whatsapp" style="padding-left: 20px;"></a> <a href="#"><img src="../imagens/instagram.png" alt="instagram" style="padding-left: 20px;"></a></p>
+        <p>Para mais detalhes entre em contato conosco pelo: <a href="https://api.whatsapp.com/send?phone=5562991902909&text=Ol%C3%A1!%20Gostaria%20de%20saber%20valores%20da%20sua%20consulta,%20estou%20interessado(a)%20e%20gostaria%20de%20marcar%20um%20hor%C3%A1rio" target="_blank"><img src="../imagens/whatsapp.png" alt="whatsapp" style="padding-left: 20px;"></a> <a href="https://www.instagram.com/marcola.classic/" target="_blank"><img src="../imagens/instagram.png" alt="instagram" style="padding-left: 20px;"></a></p>
     </footer>
 </body>
 </html>
