--- a/outras paginas/hpv.html
+++ b/outras paginas/hpv.html
@@ -24,6 +24,7 @@
             <li>Vacinação: A vacinação é uma forma eficaz de prevenir infecções por HPV. As vacinas contra o HPV são recomendadas para meninos e meninas antes do início da atividade sexual, geralmente aos 11 ou 12 anos de idade. Elas também podem ser administradas até os 26 anos para mulheres e até os 21 anos para homens que não foram vacinados anteriormente.</li>
             <li>Tratamento de Infecções Crônicas: Em casos de infecções crônicas por HPV que persistem por anos e aumentam o risco de câncer, podem ser necessários tratamentos mais intensivos, como cirurgia, terapia a laser ou terapia fotodinâmica.</li>
             <li>Aconselhamento e Suporte: O aconselhamento sobre saúde sexual e reprodutiva é fundamental para aqueles diagnosticados com HPV. Isso inclui educação sobre prevenção de infecções, redução de riscos e práticas sexuais seguras. O apoio emocional também é importante, pois o diagnóstico de HPV pode ser emocionalmente desafiador.</li>
+            <li>Seguimento Médico: Consultas de acompanhamento são importantes para monitorar a resposta ao tratamento, garantir que não haja recorrências e discutir estratégias de prevenção a longo prazo. <a href="https://api.whatsapp.com/send?phone=5562991902909&text=Ol%C3%A1!%20Gostaria%20de%20saber%20valores%20da%20sua%20consulta,%20estou%20interessado(a)%20e%20gostaria%20de%20marcar%20um%20hor%C3%A1rio" target="_blank">Agende já sua consulta no nosso WhatsApp</a></li>
         </ol>
         <a href="../index.html" style="text-decoration: none; width: 200px; display: block; margin: auto;">
             <p class="voltar">Voltar ao início</p>
@@ -31,7 +32,7 @@
     </main>
 
     <footer>
-        <p>Para mais detalhes entre em contato conosco pelo: <a href="#"><img src="../imagens/whatsapp.png" alt="whatsapp" style="padding-left: 20px;"></a> <a href="#"><img src="../imagens/instagram.png" alt="instagram" style="padding-left: 20px;"></a></p>
+        <p>Para mais detalhes entre em contato conosco pelo: <a href="https://api.whatsapp.com/send?phone=5562991902909&text=Ol%C3%A1!%20Gostaria%20de%20saber%20valores%20da%20sua%20consulta,%20estou%20interessado(a)%20e%20gostaria%20de%20marcar%20um%20hor%C3%A1rio" target="_blank"><img src="../imagens/whatsapp.png" alt="whatsapp" style="padding-left: 20px;"></a> <a href="https://www.instagram.com/marcola.classic/" target="_blank"><img src="../imagens/instagram.png" alt="instagram" style="padding-left: 20px;"></a></p>
     </footer>
 </body>
 </html>
