--- a/outras paginas/sifilis.html
+++ b/outras paginas/sifilis.html
@@ -23,7 +23,7 @@
             <li>Prevenção de Complicações: A sífilis não tratada pode levar a complicações graves, como danos aos órgãos internos, problemas neurológicos e até mesmo morte. Portanto, é crucial tratar a infecção o mais rápido possível para prevenir essas complicações.</li>
             <li>Gestantes: O tratamento da sífilis em gestantes é essencial para prevenir a transmissão da infecção para o feto, o que pode resultar em aborto espontâneo, natimorto ou bebê nascido com sífilis congênita. A penicilina é segura durante a gravidez e geralmente é administrada de acordo com as mesmas diretrizes que para adultos não grávidas.</li>
             <li>Aconselhamento e Educação: Além do tratamento com antibióticos, é importante fornecer aconselhamento sobre práticas sexuais seguras, prevenção de infecções sexualmente transmissíveis (ISTs) e uso de preservativos para reduzir o risco de contrair sífilis no futuro.</li>
-            <li>Seguimento Médico: Consultas de acompanhamento são importantes para monitorar a resposta ao tratamento, garantir que não haja recorrências e discutir estratégias de prevenção a longo prazo.</li>
+            <li>Seguimento Médico: Consultas de acompanhamento são importantes para monitorar a resposta ao tratamento, garantir que não haja recorrências e discutir estratégias de prevenção a longo prazo. <a href="https://api.whatsapp.com/send?phone=5562991902909&text=Ol%C3%A1!%20Gostaria%20de%20saber%20valores%20da%20sua%20consulta,%20estou%20interessado(a)%20e%20gostaria%20de%20marcar%20um%20hor%C3%A1rio" target="_blank">Agende já sua consulta no nosso WhatsApp</a></li>
         </ol>
         <a href="../index.html" style="text-decoration: none; width: 200px; display: block; margin: auto;">
             <p class="voltar">Voltar ao início</p>
@@ -31,7 +31,7 @@
     </main>
 
     <footer>
-        <p>Para mais detalhes entre em contato conosco pelo: <a href="#"><img src="../imagens/whatsapp.png" alt="whatsapp" style="padding-left: 20px;"></a> <a href="#"><img src="../imagens/instagram.png" alt="instagram" style="padding-left: 20px;"></a></p>
+        <p>Para mais detalhes entre em contato conosco pelo: <a href="https://api.whatsapp.com/send?phone=5562991902909&text=Ol%C3%A1!%20Gostaria%20de%20saber%20valores%20da%20sua%20consulta,%20estou%20interessado(a)%20e%20gostaria%20de%20marcar%20um%20hor%C3%A1rio" target="_blank"><img src="../imagens/whatsapp.png" alt="whatsapp" style="padding-left: 20px;"></a> <a href="https://www.instagram.com/marcola.classic/" target="_blank"><img src="../imagens/instagram.png" alt="instagram" style="padding-left: 20px;"></a></p>
     </footer>
 </body>
 </html>
