--- a/outras paginas/herpes.html
+++ b/outras paginas/herpes.html
@@ -23,6 +23,7 @@
             <li>Medidas de Alívio dos Sintomas: Analgésicos de venda livre, como paracetamol ou ibuprofeno, podem ser utilizados para aliviar a dor e o desconforto associados à herpes genital. Banhos de água morna também podem proporcionar alívio.</li>
             <li>Prevenção de Transmissão: Durante episódios de atividade viral, é importante praticar sexo seguro, usar preservativos e evitar o contato direto com as lesões para reduzir o risco de transmissão do vírus para o parceiro sexual.</li>
             <li>Terapia Supressiva: Em alguns casos, especialmente se ocorrerem recorrências frequentes, o médico pode recomendar terapia antiviral supressiva a longo prazo. Isso envolve tomar medicamentos antivirais diariamente para reduzir a frequência e a gravidade das recorrências.</li>
+            <li>Seguimento Médico: Consultas de acompanhamento são importantes para monitorar a resposta ao tratamento, garantir que não haja recorrências e discutir estratégias de prevenção a longo prazo. <a href="https://api.whatsapp.com/send?phone=5562991902909&text=Ol%C3%A1!%20Gostaria%20de%20saber%20valores%20da%20sua%20consulta,%20estou%20interessado(a)%20e%20gostaria%20de%20marcar%20um%20hor%C3%A1rio" target="_blank">Agende já sua consulta no nosso WhatsApp</a></li>
         </ol>
         <a href="../index.html" style="text-decoration: none; width: 200px; display: block; margin: auto;">
             <p class="voltar">Voltar ao início</p>
@@ -30,7 +31,7 @@
     </main>
 
     <footer>
-        <p>Para mais detalhes entre em contato conosco pelo: <a href="#"><img src="../imagens/whatsapp.png" alt="whatsapp" style="padding-left: 20px;"></a> <a href="#"><img src="../imagens/instagram.png" alt="instagram" style="padding-left: 20px;"></a></p>
+        <p>Para mais detalhes entre em contato conosco pelo: <a href="https://api.whatsapp.com/send?phone=5562991902909&text=Ol%C3%A1!%20Gostaria%20de%20saber%20valores%20da%20sua%20consulta,%20estou%20interessado(a)%20e%20gostaria%20de%20marcar%20um%20hor%C3%A1rio" target="_blank"><img src="../imagens/whatsapp.png" alt="whatsapp" style="padding-left: 20px;"></a> <a href="https://www.instagram.com/marcola.classic/" target="_blank"><img src="../imagens/instagram.png" alt="instagram" style="padding-left: 20px;"></a></p>
     </footer>
 </body>
 </html>
