Adicionando botão de voltar

--- a/outras paginas/herpes.html
+++ b/outras paginas/herpes.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <header>
+        <div>
+            <a href="../index.html">
+                <img src="../imagens/volte.png" alt="">
+            </a>
+        </div>
         <h1>Você foi diagnosticado com Herpes genital</h1>
     </header>
 
@@ -25,9 +30,7 @@
             <li>Terapia Supressiva: Em alguns casos, especialmente se ocorrerem recorrências frequentes, o médico pode recomendar terapia antiviral supressiva a longo prazo. Isso envolve tomar medicamentos antivirais diariamente para reduzir a frequência e a gravidade das recorrências.</li>
             <li>Seguimento Médico: Consultas de acompanhamento são importantes para monitorar a resposta ao tratamento, garantir que não haja recorrências e discutir estratégias de prevenção a longo prazo. <a href="https://api.whatsapp.com/send?phone=5562991902909&text=Ol%C3%A1!%20Gostaria%20de%20saber%20valores%20da%20sua%20consulta,%20estou%20interessado(a)%20e%20gostaria%20de%20marcar%20um%20hor%C3%A1rio" target="_blank">Agende já sua consulta no nosso WhatsApp</a></li>
         </ol>
-        <a href="../index.html" style="text-decoration: none; width: 200px; display: block; margin: auto;">
-            <p class="voltar">Voltar ao início</p>
-        </a>
+        
     </main>
 
     <footer>
