adicionando espaçamento na lista

--- a/outras paginas/clamidia.html
+++ b/outras paginas/clamidia.html
@@ -21,7 +21,7 @@
             <source media="(max-width: 800px)" srcset="../imagens/imagem-analise-pg.jpg">
             <img src="../imagens/imagem-analise.jpg" alt="medico_diagnosticando" style="justify-content: center;">
         </picture>
-        <p class="conteudo">O tratamento da clamídia é fundamental para prevenir complicações a longo prazo e interromper a transmissão da infecção para outras pessoas. Aqui está um resumo abrangente:</p>
+        <p class="conteudo" id="paragrafo">O tratamento da clamídia é fundamental para prevenir complicações a longo prazo e interromper a transmissão da infecção para outras pessoas. Aqui está um resumo abrangente:</p>
         <ol class="conteudo">
             <li>Antibióticos: A clamídia é tratada com antibióticos. O tratamento padrão geralmente envolve uma dose única ou uma série de doses de antibióticos, como azitromicina ou doxiciclina. É essencial completar o curso completo de antibióticos, mesmo que os sintomas desapareçam antes.</li>
             <li>Teste de Parceiros: É recomendado que os parceiros sexuais recentes sejam testados e tratados para clamídia, mesmo que não apresentem sintomas. Isso é crucial para interromper a transmissão da infecção e prevenir reinfecções.</li>
