--- a/outras paginas/gonorreia.html
+++ b/outras paginas/gonorreia.html
@@ -21,7 +21,7 @@
             <source media="(max-width: 800px)" srcset="../imagens/imagem-analise-pg.jpg">
             <img src="../imagens/imagem-analise.jpg" alt="medico_diagnosticando" style="justify-content: center;">
         </picture>
-        <p class="conteudo">O tratamento da gonorreia é fundamental para evitar complicações e interromper a transmissão da infecção. Aqui está um resumo abrangente:</p>
+        <p class="conteudo" id="paragrafo">O tratamento da gonorreia é fundamental para evitar complicações e interromper a transmissão da infecção. Aqui está um resumo abrangente:</p>
         <ol class="conteudo">
             <li>Antibióticos: A gonorreia é tratada com antibióticos. No entanto, devido ao aumento da resistência aos antibióticos, os protocolos de tratamento podem variar. A ceftriaxona, administrada por injeção, é frequentemente combinada com azitromicina ou doxiciclina para tratar gonorreia e clamídia simultaneamente.</li>
             <li>Teste e Tratamento de Parceiros: Todos os parceiros sexuais recentes devem ser testados e tratados para gonorreia, mesmo que não apresentem sintomas. Isso é essencial para interromper a transmissão da infecção e prevenir reinfecções.</li>
