--- a/outras paginas/herpes.html
+++ b/outras paginas/herpes.html
@@ -21,7 +21,7 @@
             <source media="(max-width: 800px)" srcset="../imagens/imagem-analise-pg.jpg">
             <img src="../imagens/imagem-analise.jpg" alt="medico_diagnosticando" style="justify-content: center;">
         </picture>
-        <p class="conteudo">O tratamento da herpes genital visa aliviar os sintomas, reduzir o número e a gravidade das recorrências e prevenir a transmissão do vírus para outras pessoas. Aqui está um resumo abrangente:</p>
+        <p class="conteudo" id="paragrafo">O tratamento da herpes genital visa aliviar os sintomas, reduzir o número e a gravidade das recorrências e prevenir a transmissão do vírus para outras pessoas. Aqui está um resumo abrangente:</p>
         <ol class="conteudo">
             <li>Antivirais: Medicamentos antivirais, como o aciclovir, o valaciclovir e o famciclovir, são prescritos para tratar a herpes genital. Eles ajudam a reduzir a gravidade dos sintomas durante uma crise e podem ajudar a prevenir recorrências quando tomados regularmente.</li>
             <li>Tratamento das Lesões: Durante uma crise de herpes genital, é importante manter as lesões limpas e secas para evitar a infecção secundária. Pomadas antivirais podem ser aplicadas nas lesões para acelerar a cicatrização e aliviar o desconforto.</li>
