--- a/outras paginas/hpv.html
+++ b/outras paginas/hpv.html
@@ -21,7 +21,7 @@
             <source media="(max-width: 800px)" srcset="../imagens/imagem-analise-pg.jpg">
             <img src="../imagens/imagem-analise.jpg" alt="medico_diagnosticando" style="justify-content: center;">
         </picture>
-        <p class="conteudo">O tratamento do Papilomavírus Humano (HPV) varia de acordo com os sintomas, o tipo de HPV e a gravidade da infecção. Aqui está um resumo abrangente:</p>
+        <p class="conteudo" id="paragrafo">O tratamento do Papilomavírus Humano (HPV) varia de acordo com os sintomas, o tipo de HPV e a gravidade da infecção. Aqui está um resumo abrangente:</p>
         <ol class="conteudo">
             <li>Monitoramento Regular: Em muitos casos, o HPV desaparece espontaneamente sem causar sintomas graves. Para infecções de baixo risco e lesões que não apresentam risco de câncer, pode ser recomendado o monitoramento regular sem intervenção.</li>
             <li>Tratamento de Lesões: Para lesões visíveis, como verrugas genitais, o tratamento pode ser realizado. Isso pode incluir medicamentos tópicos prescritos, como imiquimode ou ácido tricloroacético, que são aplicados diretamente na área afetada. Em alguns casos, procedimentos médicos como crioterapia (congelamento), cauterização (uso de calor) ou excisão cirúrgica podem ser necessários para remover as verrugas.</li>
