ajustando cor do botão voltar

--- a/outras paginas/aids.html
+++ b/outras paginas/aids.html
@@ -10,7 +10,7 @@
     <header>
         <div>
             <a href="../index.html">
-                <img src="../imagens/volte.png" alt="">
+                <img src="../imagens/volte.png" alt="botao para voltar">
             </a>
         </div>
         <h1>Você foi diagnosticado com AIDs</h1>
